# yuanshen

./: .gitignore  AGENTS.md  CHANGELOG.md  DEERFLOW_OPTIMIZATION.md  GaokaoSystem.spec  HEARTBEAT.md  IDENTITY.md  MCP-SKILLS-GUIDE.md  MEMORY.md  OPENCLAW-USER-MANUAL.md  README.md  SESSION-STATE.md  SOUL.md  STANDING-ORDERS.md  TOOLS.md  USER.md  YANGSHEN-GUIDELINES.md  add_all_inputs.py  add_inputs.py  analyze_excel.py  analyze_excel2.py  analyze_excel3.py  analyze_garble.py  analyze_xe.py  analyze_xe2.py  check-node.ps1  check_520.py  check_534.py  check_570.py  check_587.py  check_all_types.py  check_chroma.py  check_data.py  check_level.py  check_nodetype.py  check_output.txt  check_req.py  check_sidebar.py  check_skills.py  check_types_raw.py  (+41 more)
storyflow/: .gitignore  CHANGELOG.md  COMMERCIAL.md  DELIVERY.md  DEMO.md  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  PROMPT_DESIGN.md  QUICKSTART.md  README.md  WEB-UI.md  __init__.py  _debug2.py  _debug_test.py  _direct.py  _emoji_fix_log.txt  _emoji_log.txt  _fix_emoji.py  _launch.ps1  _start.bat  _temp_test.py  _temp_test2.py  _test_full.py  _test_llm.py  add_babel.py  add_test.py  analyze_components.py  analyze_jsx.py  check_server.py  check_umd.py  cleanup2.py  cleanup_scripts.py  convert_app.py  convert_jsx.py  convert_to_createelement.py  create_esm_test.py  create_onload_test.py  (+43 more)
storyflow/config/: default.yaml  default_config.json
storyflow/docs/: mockup-descriptions.md
storyflow/prompts/: character.txt  revise.txt  scene.txt  worldview.txt
storyflow/reference/: StoryFlow_完整版说明.md  (+1 more)
(+1296 files in other folders)
